@@ -10,12 +10,15 @@ Datasets' Load class is now load function.
 regression.py -> regression/linear_model.py
 discretemod.py -> discrete/discrete_model.py
 rlm.py -> robust/robust_linear_model.py
-glm.py -> genmod/genarlized_linear_model.py
+glm.py -> genmod/generalized_linear_model.py
 model.py -> base/model.py
 
 *main changes*
 Numerous bugfixes.
-VAR, ARMA models for time series.
+Time Series Analysis model (tsa)
+VAR (tsa.VAR)
+ARMA models for time series. (tsa.AR)
+  -optionally uses Cython for Kalman Filtering
 Improved maximum likelihood framework.
 Refactor of the datasets sub-package.
 Removed RPy dependency for running the test suite.
